fix form not properly collapsing on screen size change

--- a/src/components/FormTemplater/FormTemplater.scss
+++ b/src/components/FormTemplater/FormTemplater.scss
@@ -4,7 +4,8 @@
   .form-templater-row-grid {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
+    width: 100%;
     @media (max-width: 425px) {
       display: block;
     }
